--- a/bet/index.html
+++ b/bet/index.html
@@ -35,6 +35,17 @@
   <div class="container">
     <header><h1>Betting Vouchers</h1></header>
     <main id="list" class="grid"></main>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="1338431504"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <footer>FREEK53 NON PROFIT COMPANY © 2025</footer>
   </div>
 
@@ -73,3 +84,4 @@ card.querySelector('.visit-btn').addEventListener('click', () => {
   </script>
 </body>
 </html>
+
