--- a/bet/betway.html
+++ b/bet/betway.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hollywood Betting Vouchers</title>
+<title>Betway Betting Vouchers</title>
 <style>
   body {
     margin: 0;
@@ -101,7 +101,11 @@
 </style>
 </head>
 <body>
-<header>Hollywood Betting Vouchers</header>
+<header>
+  <a href="index.html" style="text-decoration: none; color: inherit;">
+    Betway Betting Vouchers
+  </a>
+</header>
 
 <div id="balloon-container"></div>
 
@@ -271,6 +275,7 @@
 </script>
 </body>
 </html>
+
 
 
 
