--- a/bet/hollywoodbets.html
+++ b/bet/hollywoodbets.html
@@ -101,7 +101,11 @@
 </style>
 </head>
 <body>
-<header>Hollywood Betting Vouchers</header>
+<header>
+  <a href="index.html" style="text-decoration: none; color: inherit;">
+    Hollywood Betting Vouchers
+  </a>
+</header>
 
 <div id="balloon-container"></div>
 
@@ -272,6 +276,7 @@
 </script>
 </body>
 </html>
+
 
 
 
