--- a/contacts/index.html
+++ b/contacts/index.html
@@ -170,7 +170,7 @@
     </div>
   </div>
 
-
+  <button class="share-btn" id="shareBtn">SHARE ON WHATSAPP</button>
 
   <script>
     // --- contact data (3 entries) ---
