--- a/K53_Sign_Test/road_sign_test6.html
+++ b/K53_Sign_Test/road_sign_test6.html
@@ -871,13 +871,13 @@
   <div class="left-content">
     <!-- Your left-side content goes here (70%) -->
     <div class="btext">
-            <button id="q111" onclick="downloadHeavy('q111')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
+            <button id="a" onclick="downloadHeavy('a')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
       </div>
     <div class="btext">
-            <button id="q112" onclick="downloadLight('q112')" type="submit" class="button_1">b. Light Vehicles Memo</button>
+            <button id="b" onclick="downloadLight('b')" type="submit" class="button_1">b. Light Vehicles Memo</button>
       </div>
     <div class="btext">
-            <button id="q113" onclick="downloadMotor('q113')" type="submit" class="button_1">c. Motorcycle Memo</button>
+            <button id="c" onclick="downloadMotor('c')" type="submit" class="button_1">c. Motorcycle Memo</button>
       </div>
   </div>
 
@@ -1820,13 +1820,13 @@
   <div class="left-content">
     <!-- Your left-side content goes here (70%) -->
     <div class="btext">
-            <button id="q111" onclick="downloadHeavy('q111')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
+            <button id="d" onclick="downloadHeavy('d')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
       </div>
     <div class="btext">
-            <button id="q112" onclick="downloadLight('q112')" type="submit" class="button_1">b. Light Vehicles Memo</button>
+            <button id="e" onclick="downloadLight('e')" type="submit" class="button_1">b. Light Vehicles Memo</button>
       </div>
     <div class="btext">
-            <button id="q113" onclick="downloadMotor('q113')" type="submit" class="button_1">c. Motorcycle Memo</button>
+            <button id="f" onclick="downloadMotor('f')" type="submit" class="button_1">c. Motorcycle Memo</button>
       </div>
   </div>
 
@@ -2654,13 +2654,13 @@
   <div class="left-content">
     <!-- Your left-side content goes here (70%) -->
     <div class="btext">
-            <button id="q111" onclick="downloadHeavy('q111')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
+            <button id="g" onclick="downloadHeavy('g')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
       </div>
     <div class="btext">
-            <button id="q112" onclick="downloadLight('q112')" type="submit" class="button_1">b. Light Vehicles Memo</button>
+            <button id="h" onclick="downloadLight('h')" type="submit" class="button_1">b. Light Vehicles Memo</button>
       </div>
     <div class="btext">
-            <button id="q113" onclick="downloadMotor('q113')" type="submit" class="button_1">c. Motorcycle Memo</button>
+            <button id="i" onclick="downloadMotor('i')" type="submit" class="button_1">c. Motorcycle Memo</button>
       </div>
   </div>
 
@@ -3202,6 +3202,7 @@ function downloadMotor(buttonId) {
 }
 
 </script>
+
 
 
 
