--- a/K53_Sign_Test/download.html
+++ b/K53_Sign_Test/download.html
@@ -73,7 +73,7 @@
   <div class="right-content">
     <!-- Your right-side content (image) goes here (30%) -->
     <div class="pss">
-      <a ><img src="../img/download.png"></a>
+      <a ><img src="../img/downloads.png"></a>
     </div>
   </div>
 </div>
@@ -618,5 +618,6 @@ function downloadMotor(buttonId) {
     link.download = "MotorcycleMemo.pdf";
     link.click();
 }
+
 
 </script>
