--- a/K53_Sign_Test/download.html
+++ b/K53_Sign_Test/download.html
@@ -73,7 +73,7 @@
   <div class="right-content">
     <!-- Your right-side content (image) goes here (30%) -->
     <div class="pss">
-      <a ><img src="../img/downloads.png"></a>
+      <a ><img src="../img/download.png"></a>
     </div>
   </div>
 </div>
@@ -621,3 +621,4 @@ function downloadMotor(buttonId) {
 
 
 </script>
+
