--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <p>Learner's Test </p>
             <p>Multiple Choice Questions</p>
             <a href="./home_images/home.html" class="btn">Start...</a>
+			<a href="./K53_Sign_Test/download.html" class="btn">Download Memo</a>
         </div>
 
     </div>
@@ -92,6 +93,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
