--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>K53</h1>
             <p>Learner's Test </p>
             <p>Multiple Choice Questions</p>
-            <a href="./home_images/home.html" class="btn">Start...</a>
+            <a href="./home_images/home.html" class="btn">Start...</a> <br> <br>
 			<a href="./K53_Sign_Test/download.html" class="btn">Download Memo</a>
         </div>
 
@@ -93,6 +93,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
