--- a/K53_Sign_Test/download.html
+++ b/K53_Sign_Test/download.html
@@ -46,7 +46,7 @@
 
     <div class="container">
       <div id="branding">
-        <p><a ><span class="score">Download</span></a></p>
+        <p><a ><span class="score">If you are from TikTok, press the above 3 dots to Open in brower. ♥️ </span></a></p>
       </div>
     </div>
   </div>
@@ -606,6 +606,7 @@ function downloadMotor(buttonId) {
 
 
 </script>
+
 
 
 
