--- a/home_images/home.html
+++ b/home_images/home.html
@@ -46,7 +46,7 @@
 	</header>
 
 		<div id="results9">
-		<a href="downloads.html">Downloads</a><br>
+		<a href="../K53_Sign_Test/download.html">Downloads</a><br>
 		
 
 		
@@ -184,6 +184,7 @@ if ('serviceWorker' in navigator) {
  				})
 	}
  </script>
+
 
 
 
