--- a/K53_Sign_Test/download.html
+++ b/K53_Sign_Test/download.html
@@ -46,7 +46,7 @@
 
     <div class="container">
       <div id="branding">
-        <p><a ><span class="score">If you are from TikTok, press the above 3 dots to Open in brower. ♥️. Else ignore </span></a></p>
+        <p><a ><span class="score">If you are from TikTok, press the above 3 dots to Open in brower. ♥️. Else continue to download. </span></a></p>
       </div>
     </div>
   </div>
@@ -60,13 +60,13 @@
   <div class="left-content">
     <!-- Your left-side content goes here (70%) -->
     <div class="btext">
-            <button id="a" onclick="downloadHeavy('a')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
+            <button id="a" onclick="downloadHeavy('a')" type="submit" class="button_1">a. Download Heavy Vehicles  Memo</button>
       </div>
     <div class="btext">
-            <button id="b" onclick="downloadLight('b')" type="submit" class="button_1">b. Light Vehicles Memo</button>
+            <button id="b" onclick="downloadLight('b')" type="submit" class="button_1">b. Download Light Vehicles Memo</button>
       </div>
     <div class="btext">
-            <button id="c" onclick="downloadMotor('c')" type="submit" class="button_1">c. Motorcycle Memo</button>
+            <button id="c" onclick="downloadMotor('c')" type="submit" class="button_1">c. Download Motorcycle Memo</button>
       </div>
   </div>
 
@@ -606,6 +606,7 @@ function downloadMotor(buttonId) {
 
 
 </script>
+
 
 
 
