--- a/home_images/home.html
+++ b/home_images/home.html
@@ -58,6 +58,10 @@
 		<a href="k53-sa.html">K53-SA</a><br>
 		</div>
 
+	        <div class="btext">
+			<a href="../K53_Sign_Test/download.html" class="btn">Download Memo</a>
+        </div>
+
 		<div class="ps" style="margin-top: 50px;">
 			<a href="../K53_Controls_Test/test_code.html"><img src="K53_Controls_Test.PNG" class="center"></a>
 		</div>	
@@ -184,6 +188,7 @@ if ('serviceWorker' in navigator) {
  				})
 	}
  </script>
+
 
 
 
