--- a/jobs/index.html
+++ b/jobs/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Jobs South Africa</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
   <style>
     :root {
       --bg:#000; --text:#fff; --muted:#bfbfbf; --card:#0f0f0f;
@@ -286,3 +288,4 @@
   </script>
 </body>
 </html>
+
