--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -904,31 +904,17 @@
       </div>
     </div>
   </div>
-   <div class="main_question">
-    <p>  Share these documents to everyone. Not for sale</p>
-  </div>
-
-<div class="main-layout">
-  <div class="left-content">
-    <!-- Your left-side content goes here (70%) -->
-    <div class="btext">
-            <button id="q111" onclick="downloadHeavy('q111')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
-      </div>
-    <div class="btext">
-            <button id="q112" onclick="downloadLight('q112')" type="submit" class="button_1">b. Light Vehicles Memo</button>
-      </div>
-    <div class="btext">
-            <button id="q113" onclick="downloadMotor('q113')" type="submit" class="button_1">c. Motorcycle Memo</button>
-      </div>
-  </div>
-
-  <div class="right-content">
-    <!-- Your right-side content (image) goes here (30%) -->
-    <div class="pss">
-      <a ><img src="../img/coat.png"></a>
-    </div>
-  </div>
-</div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="1338431504"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div class="inline-buttons" style="border-top: 1px;">
   <button class="nav-btn" onclick="location.href='#10'">&#x25C0; Previous</button>
   <button class="nav-btn">Review Questions</button>
@@ -1774,4 +1760,5 @@ function downloadMotor(buttonId) {
 }
 
 </script>
+
 
