--- a/K53_Rules_Test/road_rules_test5.html
+++ b/K53_Rules_Test/road_rules_test5.html
@@ -811,32 +811,17 @@
       </div>
     </div>
   </div>
- 
-  <div class="main_question">
-    <p>  Share these documents to everyone. Not for sale</p>
-  </div>
-
-<div class="main-layout">
-  <div class="left-content">
-    <!-- Your left-side content goes here (70%) -->
-    <div class="btext">
-            <button id="a" onclick="downloadHeavy('a')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
-      </div>
-    <div class="btext">
-            <button id="b" onclick="downloadLight('b')" type="submit" class="button_1">b. Light Vehicles Memo</button>
-      </div>
-    <div class="btext">
-            <button id="c" onclick="downloadMotor('c')" type="submit" class="button_1">c. Motorcycle Memo</button>
-      </div>
-  </div>
-
-  <div class="right-content">
-    <!-- Your right-side content (image) goes here (30%) -->
-    <div class="pss">
-      <a ><img src="../img/coat.png"></a>
-    </div>
-  </div>
-</div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="1338431504"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <div class="inline-buttons" style="border-top: 1px;">
   <button class="nav-btn" onclick="location.href='#10'">&#x25C0; Previous</button>
@@ -1704,31 +1689,17 @@
     </div>
   </div>
  
-  <div class="main_question">
-    <p>  Share these documents to everyone. Not for sale</p>
-  </div>
-
-<div class="main-layout">
-  <div class="left-content">
-    <!-- Your left-side content goes here (70%) -->
-    <div class="btext">
-            <button id="d" onclick="downloadHeavy('d')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
-      </div>
-    <div class="btext">
-            <button id="e" onclick="downloadLight('e')" type="submit" class="button_1">b. Light Vehicles Memo</button>
-      </div>
-    <div class="btext">
-            <button id="f" onclick="downloadMotor('f')" type="submit" class="button_1">c. Motorcycle Memo</button>
-      </div>
-  </div>
-
-  <div class="right-content">
-    <!-- Your right-side content (image) goes here (30%) -->
-    <div class="pss">
-      <a ><img src="../img/coat.png"></a>
-    </div>
-  </div>
-</div>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="1338431504"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 <div class="inline-buttons" style="border-top: 1px;">
@@ -2489,32 +2460,17 @@
       </div>
     </div>
   </div>
- <div class="main_question">
-    <p>  Share these documents to everyone. Not for sale</p>
-  </div>
-
-<div class="main-layout">
-  <div class="left-content">
-    <!-- Your left-side content goes here (70%) -->
-    <div class="btext">
-            <button id="g" onclick="downloadHeavy('g')" type="submit" class="button_1">a. Heavy Vehicles  Memo</button>
-      </div>
-    <div class="btext">
-            <button id="h" onclick="downloadLight('h')" type="submit" class="button_1">b. Light Vehicles Memo</button>
-      </div>
-    <div class="btext">
-            <button id="i" onclick="downloadMotor('i')" type="submit" class="button_1">c. Motorcycle Memo</button>
-      </div>
-  </div>
-
-  <div class="right-content">
-    <!-- Your right-side content (image) goes here (30%) -->
-    <div class="pss">
-      <a ><img src="../img/coat.png"></a>
-    </div>
-  </div>
-</div>
-
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="1338431504"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 <div class="inline-buttons" style="border-top: 1px;">
@@ -3039,6 +2995,7 @@ function downloadMotor(buttonId) {
 }
 
 </script>
+
 
 
 
