--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="particles-js">
         <div class="btext">
             <h1>K53</h1>
-            <p>Learner's Test </p>
+            <p>Learner's License Test </p>
             <p>Multiple Choice Questions</p>
             <a href="./home_images/home.html" class="btn">Start...</a> <br> <br>
 			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO</a>
@@ -98,6 +98,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
