--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="title" content="Learner's Licence Test Questions & Answers South Africa (2025)">
+<meta name="description" content="Free Learner's Licence test questions and answers for Car (Light Motor Vehicle), Motorbike, and Truck learners. Updated 2025. Download, revise & pass easily.">
+
+<meta name="keywords" content="learners licence questions, learners test answers, learners licence test memos, K53 learners test, learners licence test online, south africa learners test, learners test pdf, k53 rules of the road, road signs test, learners test practice">
+
+<meta name="robots" content="index, follow">
+<meta name="language" content="English">
+<meta name="author" content="freek53.xyz">
+<meta name="coverage" content="South Africa">
+<meta name="distribution" content="Global">
+<meta name="rating" content="General">
+
+<!-- For Google & Social Sharing -->
+<meta property="og:title" content="Learner's Licence Test Questions & Answers (South Africa)">
+<meta property="og:description" content="Practice real Learner's Licence questions and answers (K53). Free online revision for Cars, Bikes & Trucks. Pass first time!">
+<meta property="og:type" content="website">
     <title>FREEK53</title>
     <!--<link rel="stylesheet" type="text/css" href="./css/style.css">-->
   <!-- PWA basics -->
@@ -98,6 +114,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
