--- a/K53_Sign_Test/download.html
+++ b/K53_Sign_Test/download.html
@@ -53,7 +53,7 @@
 
  
   <div class="main_question">
-    <p>  Share these documents to everyone. Not for sale</p>
+    <p>  Please wait patiently ~ 1 minute, the pdf file is large about 25 mb and 1000+ pages</p>
   </div>
 
 <div class="main-layout">
@@ -606,6 +606,7 @@ function downloadMotor(buttonId) {
 
 
 </script>
+
 
 
 
