--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 <body>
     <div id="particles-js">
         <div class="btext">
-            <h1>K53</h1>
-            <p>Learner's License Test </p>
-            <p>Multiple Choice Questions</p>
-            <a href="./home_images/home.html" class="btn">Start...</a> <br> <br>
-			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO</a>
+            <h1>Pluto🪐</h1>
+            <p>Girls register + </p>
+            <p>Boys click the WhatsApp button</p>
+            <a href="freek53.xyz/16" class="btn">Start...</a>
         </div>
 
     </div>
@@ -114,6 +113,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
