--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <meta name="robots" content="index, follow">
 <meta name="language" content="English">
-<meta name="author" content="freek53.xyz">
+<meta name="author" content="Pluto🪐.xyz">
 <meta name="coverage" content="South Africa">
 <meta name="distribution" content="Global">
 <meta name="rating" content="General">
@@ -29,7 +29,7 @@
 <meta property="og:title" content="Learner's Licence Test Questions & Answers (South Africa)">
 <meta property="og:description" content="Practice real Learner's Licence questions and answers (K53). Free online revision for Cars, Bikes & Trucks. Pass first time!">
 <meta property="og:type" content="website">
-    <title>FREEK53</title>
+    <title>Pluto🪐</title>
     <!--<link rel="stylesheet" type="text/css" href="./css/style.css">-->
   <!-- PWA basics -->
   <meta name="theme-color" content="#000000" />
@@ -45,10 +45,10 @@
 <body>
     <div id="particles-js">
         <div class="btext">
-            <h1>Pluto🪐</h1>
+            <h1>Pluto🪐</h1> <br><br>
             <p>Girls register + </p>
             <p>Boys click the WhatsApp button</p>
-            <a href="freek53.xyz/16" class="btn">Start...</a>
+            <a href="https://freek53.xyz/16/" class="btn">Start...</a>
         </div>
 
     </div>
@@ -113,6 +113,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
