--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     var monthName = date.toLocaleString('default', { month: 'long' });
     var year = date.getFullYear();
 
-    document.getElementById("snackbars").innerHTML = "Last Updated: " + monthName + " " + year;
+    document.getElementById("snackbars").innerHTML = "Pluto🪐";
 </script>
 
 <script type="text/javascript">
@@ -113,6 +113,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
