--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,64 +10,62 @@
 
   gtag('config', 'UA-123711353-2');
 </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="title" content="Learner's Licence Test Questions & Answers South Africa (2025)">
+<meta name="description" content="Free Learner's Licence test questions and answers for Car (Light Motor Vehicle), Motorbike, and Truck learners. Updated 2025. Download, revise & pass easily.">
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-<meta name="title" content="Pluto🪐 - WhatsApp Contacts & People Near Me">
-<meta name="description" content="Find WhatsApp contacts, girls near me, boys near me, status viewers, teens apps, and people to chat with. Connect instantly on Pluto🪐.">
-
-<meta name="keywords" content="WhatsApp contacts, people near me, add me on WhatsApp, girls near me, boys near me, teens apps, status viewers, WhatsApp friends, SA WhatsApp contacts">
+<meta name="keywords" content="learners licence questions, learners test answers, learners licence test memos, K53 learners test, learners licence test online, south africa learners test, learners test pdf, k53 rules of the road, road signs test, learners test practice">
 
 <meta name="robots" content="index, follow">
 <meta name="language" content="English">
-<meta name="author" content="Pluto🪐">
+<meta name="author" content="freek53.xyz">
 <meta name="coverage" content="South Africa">
 <meta name="distribution" content="Global">
 <meta name="rating" content="General">
 
 <!-- For Google & Social Sharing -->
-<meta property="og:title" content="Pluto🪐 - WhatsApp Contacts & People Near Me">
-<meta property="og:description" content="Find WhatsApp contacts, girls near me, boys near me, and status viewers. Connect instantly on Pluto🪐.">
+<meta property="og:title" content="Learner's Licence Test Questions & Answers (South Africa)">
+<meta property="og:description" content="Practice real Learner's Licence questions and answers (K53). Free online revision for Cars, Bikes & Trucks. Pass first time!">
 <meta property="og:type" content="website">
-
-<title>Pluto🪐</title>
-
-<meta name="theme-color" content="#000000" />
-<link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
-<link rel="icon" href="/img/images.png" type="image/png" />
-<link rel="apple-touch-icon" href="/images192.png" />
-
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="shortcut icon" type="image/ico" href="./img/images.png">
-<link rel="manifest" href="manifest.json">
+    <title>FREEK53</title>
+    <!--<link rel="stylesheet" type="text/css" href="./css/style.css">-->
+  <!-- PWA basics -->
+  <meta name="theme-color" content="#000000" />
+  <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+  <link rel="icon" href="/img/images.png" type="image/png" />
+  <link rel="apple-touch-icon" href="/images192.png" />
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" type="image/ico" href="./img/images.png">
+    <link rel="manifest" href="manifest.json">
+   
 
 </head>
-
 <body>
     <div id="particles-js">
         <div class="btext">
-            <h1>Pluto🪐</h1> <br><br>
-            <p>Girls register + </p>
-            <p>Boys click the WhatsApp button</p>
-
-            <!-- UPDATED BUTTON LINK -->
-            <a href="https://freek53.xyz/16/" class="btn">Start...</a>
+            <h1>K53</h1>
+            <p>Learner's License Test </p>
+            <p>Multiple Choice Questions</p>
+            <a href="./home_images/home.html" class="btn">Start...</a> <br> <br>
+			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO</a>
         </div>
+
     </div>
+  <!-- Install banner (hidden by default) -->
 
-<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-<script>
-    particlesJS.load('particles-js', 'particles.json',
-    function(){
-        console.log('particles.json loaded...')
-    })
-</script>
-
-<div id="snackbars"></div>
-
+    <script>
+        particlesJS.load('particles-js', 'particles.json',
+        function(){
+            console.log('particles.json loaded...')
+        })
+    </script>
+                    <div id="snackbars">
+            
+        </div>  
 </body>
 </html>
 <script type="text/javascript">
@@ -78,32 +76,55 @@
         x.className = x.className.replace("show", "");
     }, 3000);
 
-    document.getElementById("snackbars").innerHTML = "Pluto🪐";
+    // Get current month and year
+    var date = new Date();
+    var monthName = date.toLocaleString('default', { month: 'long' });
+    var year = date.getFullYear();
+
+    document.getElementById("snackbars").innerHTML = "Last Updated: " + monthName + " " + year;
 </script>
 
 <script type="text/javascript">
-let deferredPrompt = null;
+    
+  // --- INSTALL PROMPT WIRING ---
+  let deferredPrompt = null;
 
-const banner       = document.getElementById('installBanner');
-const installBtn   = document.getElementById('installBtn');
-const installClose = document.getElementById('installClose');
+  const banner       = document.getElementById('installBanner');
+  const installBtn   = document.getElementById('installBtn');
+  const installClose = document.getElementById('installClose');
 
-function showInstallPromotion() { banner.style.display = 'block'; }
-function hideMyInstallPromotion() { banner.style.display = 'none'; }
+  function showInstallPromotion() { banner.style.display = 'block'; }
+  function hideMyInstallPromotion() { banner.style.display = 'none'; }
 
-window.addEventListener('beforeinstallprompt', (e) => {
-  e.preventDefault();
-  deferredPrompt = e;    
-  showInstallPromotion();
-});
+  // Capture the event so we can show our own UI
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();           // don't let Chrome show its mini-infobar
+    deferredPrompt = e;           // save it for later
+    showInstallPromotion();       // show our banner
+  });
 
-installBtn.addEventListener('click', async () => {
-  hideMyInstallPromotion();
-  if (!deferredPrompt) return;
-  deferredPrompt.prompt();
-  const { outcome } = await deferredPrompt.userChoice;
-  deferredPrompt = null;
-});
+  installBtn.addEventListener('click', async () => {
+    hideMyInstallPromotion();
+    if (!deferredPrompt) return;  // safety
+    deferredPrompt.prompt();      // <-- THIS is what Chrome wants to see
+    const { outcome } = await deferredPrompt.userChoice;
+    console.log('PWA install choice:', outcome);
+    deferredPrompt = null;        // must be reset; can only be used once
+  });
 
-installClose.addEventListener('click', hideMyInstallPromotion);
+  installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
