--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -81,6 +81,7 @@
 
 </div>
 
+<p class="niches"></p>
 
 
 
@@ -112,6 +113,7 @@
 
 
 
+<p class="niches"></p>
 
 
 <div class="question" id="2">
@@ -196,7 +198,7 @@
 
 
 
-
+<p class="niches"></p>
 
 
 <div class="question" id="3">
@@ -283,7 +285,7 @@
 
 
 
-
+<p class="niches"></p>
 <div class="question" id="4">
   <div class="question_number">
     <h3>Question 4 of 14</h3>
@@ -367,7 +369,7 @@
 
 
 
-
+<p class="niches"></p>
 
 <div class="question" id="5">
   <div class="question_number">
@@ -422,6 +424,7 @@
 
 
 </div>
+<p class="niches"></p>
 
 <div class="question" id="Ad1">
   <div class="question_number">
@@ -495,7 +498,7 @@
 
 
 
-
+<p class="niches"></p>
 
 <div class="question" id="6">
   <div class="question_number">
@@ -580,7 +583,7 @@
 
 
 
-
+<p class="niches"></p>
 
 <div class="question" id="7">
   <div class="question_number">
@@ -666,7 +669,7 @@
 
 
 
-
+<p class="niches"></p>
 <div class="question" id="8">
   <div class="question_number">
     <h3>Question 8 of 14</h3>
@@ -750,7 +753,7 @@
 
 
 
-
+<p class="niches"></p>
 
 <div class="question" id="9">
   <div class="question_number">
@@ -835,7 +838,7 @@
 
 
 
-
+<p class="niches"></p>
 
 <div class="question" id="10">
   <div class="question_number">
@@ -890,7 +893,7 @@
 </div>
 
 
-
+<p class="niches"></p>
 <div class="question" id="prm1">
   <div class="question_number">
     <h3>Premium Content</h3>
@@ -958,7 +961,7 @@
 
 
 
-
+<p class="niches"></p>
 <div class="question" id="11">
   <div class="question_number">
     <h3>Question 11 of 14</h3>
@@ -1043,7 +1046,7 @@
 
 
 
-
+<p class="niches"></p>
 <div class="question" id="12">
   <div class="question_number">
     <h3>Question 12 of 14</h3>
@@ -1126,7 +1129,7 @@
 
 
 
-
+<p class="niches"></p>
 
 
 <div class="question" id="13">
@@ -1212,7 +1215,7 @@
 
 
 
-
+<p class="niches"></p>
 
 <div class="question" id="14">
   <div class="question_number">
@@ -1266,7 +1269,7 @@
 
 
 </div>
-
+<p class="niches"></p>
 <div class="question" id="Ad2">
   <div class="question_number">
     <h3>Advertisement</h3>
@@ -1760,5 +1763,61 @@ function downloadMotor(buttonId) {
 }
 
 </script>
+<script>
+const nicheAdvices = [
+"Comparing life insurance quotes from multiple providers helps identify affordable premiums suitable coverage flexible benefits and reliable claim histories ensuring long term family protection while avoiding unnecessary policy costs online.",
+"Requesting car insurance quotes annually allows drivers to compare premiums coverage limits excess options and additional benefits ensuring cost effective vehicle protection while preventing overpayment caused by loyalty pricing penalties.",
+"Choosing the best health insurance plan requires comparing hospital networks benefit limits exclusions co payments and claim procedures ensuring medical coverage matches family healthcare needs and long term budget expectations.",
+"Consulting a licensed financial advisor helps align investment strategies retirement planning tax efficiency and risk tolerance ensuring informed decisions while avoiding costly mistakes driven by emotional market reactions.",
+"Using regulated online investment platforms allows investors to compare fees fund options performance tools and security features ensuring efficient portfolio management and consistent long term wealth building outcomes.",
+"Comparing personal loan interest rates and repayment terms across lenders improves affordability reduces total borrowing costs and helps maintain healthy monthly cash flow without unnecessary financial strain.",
+"Mortgage comparison tools help homebuyers evaluate interest rates repayment periods lender fees and approval requirements ensuring better property financing decisions and sustainable long term affordability planning.",
+"Choosing low cost index funds through reputable investment providers improves returns by minimizing fees offering diversification and aligning portfolios with long term financial growth objectives.",
+"Reviewing short term insurance policies annually helps compare premiums coverage limits exclusions and insurers ensuring valuable assets remain protected while avoiding underinsurance or unnecessary premium expenses.",
+"Using retirement annuity calculators helps investors compare providers contribution levels tax benefits and projected income ensuring informed retirement planning and stable future financial security outcomes.",
+"Comparing business insurance quotes protects companies against liability property loss and operational risks while ensuring cost effective coverage aligned with industry requirements and regulatory compliance obligations.",
+"Selecting the best credit card requires comparing interest rates annual fees rewards programs and benefits ensuring alignment with spending habits and long term personal financial goals.",
+"Evaluating investment fund performance alongside fees risk profiles and asset allocation helps investors choose suitable options aligned with objectives time horizons and risk tolerance levels.",
+"Comparing home insurance providers ensures coverage includes structural damage theft natural disasters and liability protection while maintaining affordable premiums and reliable claim settlement records.",
+"Working with a qualified tax advisor helps optimize deductions exemptions and investment structures ensuring compliance while improving net returns through legal tax efficiency strategies.",
+"Comparing fixed deposit rates across banks helps savers maximize interest earnings while selecting suitable lock in periods and ensuring capital protection through regulated financial institutions.",
+"Choosing the right medical aid plan requires evaluating monthly contributions benefit thresholds waiting periods and hospital coverage ensuring healthcare affordability and adequate protection for dependents.",
+"Comparing disability insurance policies ensures income protection during illness or injury by evaluating benefit payouts waiting periods exclusions and premium affordability for long term financial stability.",
+"Using investment comparison websites helps analyze ETFs unit trusts and retirement products ensuring transparent fee structures performance history and suitability for long term wealth creation.",
+"Evaluating insurer claim settlement ratios helps consumers choose reliable providers offering faster payouts transparent processes and reduced claim disputes during stressful loss events.",
+"Comparing student loan options helps families evaluate interest rates repayment flexibility and funding limits ensuring affordable education financing without excessive long term debt burdens.",
+"Selecting the best savings account requires comparing interest rates withdrawal flexibility fees and digital banking features ensuring efficient cash management and emergency fund accessibility.",
+"Using financial planning tools helps individuals align budgeting saving investing and insurance decisions ensuring disciplined progress toward clearly defined long term financial independence goals.",
+"Comparing travel insurance policies ensures coverage for medical emergencies cancellations lost baggage and delays while avoiding exclusions that may cause unexpected claim rejections.",
+"Choosing reputable investment brokers ensures platform security regulatory compliance transparent fees and access to diversified markets supporting confident long term investing strategies.",
+"Reviewing insurance excess amounts helps balance premium affordability with manageable out of pocket costs during claims or unexpected loss situations.",
+"Comparing retirement fund administrators ensures competitive fees strong governance investment performance and reliable benefit payments during post employment years.",
+"Selecting the right life cover amount requires assessing income replacement debt obligations dependents education costs and inflation ensuring sufficient protection without excessive premiums.",
+"Using online insurance calculators helps estimate appropriate coverage levels premiums and benefits ensuring informed decisions before requesting personalized insurance quotes from providers.",
+"Evaluating property investment opportunities requires analyzing rental yields financing costs location demand and long term appreciation potential ensuring sustainable real estate returns.",
+"Comparing forex trading platforms helps assess spreads leverage fees regulation and execution reliability ensuring safer participation in currency markets.",
+"Choosing diversified investment portfolios reduces risk exposure improves stability and supports consistent returns across varying market conditions and economic cycles.",
+"Comparing funeral insurance policies ensures affordable premiums coverage amounts waiting periods and beneficiary payouts supporting family financial relief during emotional loss events.",
+"Selecting ethical investment funds allows investors to align portfolios with environmental social governance values while maintaining competitive financial performance.",
+"Comparing business loan options helps entrepreneurs evaluate interest rates repayment flexibility approval timelines and funding limits supporting sustainable business growth decisions.",
+"Reviewing insurance policy wording helps prevent claim disputes by understanding exclusions conditions benefit limits and documentation requirements before incidents occur.",
+"Using robo advisory investment services offers automated portfolio management diversification and low fees suitable for long term investors seeking simplicity.",
+"Comparing medical insurance gap cover options protects against hospital shortfalls ensuring reduced out of pocket medical expenses during specialist treatments.",
+"Choosing the best annuity option requires comparing guaranteed income levels escalation rates inflation protection and provider stability ensuring retirement income sustainability.",
+"Evaluating investment risk profiles helps align asset allocation with financial goals preventing panic selling during market volatility periods.",
+"Comparing home loan refinancing offers helps reduce interest costs shorten repayment terms and improve monthly affordability through better negotiated mortgage conditions.",
+"Selecting reputable insurance brokers ensures expert guidance access to multiple providers and support during claims processes improving coverage outcomes.",
+"Using investment tracking tools helps monitor performance asset allocation fees and progress toward financial goals enabling timely portfolio adjustments.",
+"Comparing umbrella insurance policies provides additional liability protection safeguarding assets against large claims exceeding standard policy limits.",
+"Choosing regulated financial institutions ensures consumer protection transparent operations and compliance reducing risks of fraud or mismanagement."
+];
+
+document.querySelectorAll(".niches").forEach(el => {
+  const randomAdvice = nicheAdvices[Math.floor(Math.random() * nicheAdvices.length)];
+  el.textContent = randomAdvice;
+});
+</script>
+
+
 
 
